right-top menu and footer work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-    <app-header></app-header>
+<div class="container-fluid">
+    <div>
+        <app-header></app-header>
+    </div>
     <hr>
-    <app-main></app-main>
-    <hr>
-    <app-footer></app-footer>
+    <div>
+        <app-main></app-main>
+    </div>
+    <div class="footer-spec">
+        <app-footer></app-footer>
+    </div>
 </div>
