--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,1 +1,8 @@
-<app-navigation-bar></app-navigation-bar>
+<div>
+    <div>
+        header content
+    </div>
+    <div>
+    <app-navigation-bar></app-navigation-bar>
+    </div>
+</div>
